--- a/Superheros/Superheros.csproj
+++ b/Superheros/Superheros.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\Superhero\View.cshtml" />
     <Content Include="Views\Superhero\Create.cshtml" />
     <Content Include="Views\Superhero\Edit.cshtml" />
+    <Content Include="Views\Superhero\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
